# Sentinel

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
apps/backend/: pyproject.toml  requirements-dev.txt  requirements.txt
apps/backend/config/: celery.py  settings.py  urls.py  wsgi.py
apps/backend/sentinel/: __init__.py
apps/backend/sentinel/api/v1/: urls.py  views.py
apps/backend/sentinel/api_keys/: admin.py  apps.py  authentication.py  models.py  serializers.py  services.py  urls.py  views.py
apps/backend/sentinel/api_keys/migrations/: 0001_initial.py
apps/backend/sentinel/audit/: admin.py  apps.py  decorators.py  models.py  repositories.py  serializers.py  services.py  signing.py  tasks.py  urls.py  views.py
apps/backend/sentinel/audit/migrations/: 0001_initial.py  0002_add_actor_type_and_risk_score.py
apps/backend/sentinel/auth_service/: admin.py  apps.py  models.py  permissions.py  repositories.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/backend/sentinel/auth_service/migrations/: 0001_initial.py
apps/backend/sentinel/compliance/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/backend/sentinel/compliance/migrations/: 0001_initial.py
apps/backend/sentinel/core/: apps.py  security.py
apps/backend/sentinel/core/exceptions/: base.py  handlers.py
apps/backend/sentinel/core/health/: checks.py  views.py
apps/backend/sentinel/core/management/commands/: wait_for_db.py
apps/backend/sentinel/core/middleware/: request_id.py  structured_logging.py  trace_context.py
apps/backend/sentinel/core/models/: base.py
apps/backend/sentinel/core/pagination/: cursor.py
apps/backend/sentinel/core/urls/: health.py
apps/backend/sentinel/notifications/: apps.py  tasks.py
apps/backend/sentinel/risk/: admin.py  apps.py  engine.py  evaluator.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/backend/sentinel/risk/migrations/: 0001_initial.py  0002_seed_builtin_rules.py
apps/backend/tests/: conftest.py
apps/backend/tests/integration/: test_api_key_endpoints.py  test_api_v1.py  test_audit_endpoints.py  test_auth_endpoints.py  test_health_endpoints.py  test_risk_endpoints.py
apps/backend/tests/unit/: test_api_keys.py  test_audit_signing.py  test_auth_service.py  test_exceptions.py  test_health_checks.py  test_middleware_request_id.py  test_permissions.py  test_risk_engine.py
apps/frontend/: next.config.ts  package.json  tailwind.config.ts
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/frontend/src/hooks/: use-auth.tsx  use-sentinel-data.ts
apps/frontend/src/types/: api.ts  dashboard.ts
docs/: architecture.md  coding-standards.md  contributing.md  roadmap.md  security-policy.md
docs/adr/: README.md  adr-001-monorepo-structure.md  adr-002-django-over-fastapi.md  adr-003-to-008.md  adr-009-to-011.md  adr-012-to-014.md
docs/posts/: post-01-the-problem.md  post-02-phase1-and-phase2.md  post-03-the-problem-ai-agent-audit.md  post-04-phase3-risk-intelligence.md  post-05-the-problem-investigation.md  post-06-phase4-dashboard.md
infra/docker/: Dockerfile.backend  Dockerfile.frontend
infra/docker/postgres/: init.sql
infra/grafana/provisioning/datasources/: datasource.yml
infra/nginx/: nginx.dev.conf
infra/otel/: otel-collector.yml
infra/prometheus/: prometheus.yml
(+13 files in other folders)
